--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <h1>Hello Poppers</h1>
+        <form>
+            <input type="text" id="search"
+            placeholder="Search by location"
+            autocomplete="off"/>
+        </form>
     </body>
 </html>
